--- a/src/assets/css/NavBar.css
+++ b/src/assets/css/NavBar.css
@@ -1,6 +1,6 @@
 .navbar {
   position: absolute;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
@@ -18,4 +18,17 @@
    margin-right: 40px;
    font-size: 14px;
 
+}
+
+.navbar-link {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.navbar-link:hover {
+  color: var(--faded-red);
+}
+
+.active {
+  display: none;
 }
