--- a/src/assets/css/Newsletter.css
+++ b/src/assets/css/Newsletter.css
@@ -3,6 +3,7 @@
   width: 100%;
   display: block;
   text-align: center;
+  border-top: 1px solid var(--gray);
 }
 
 #newsletter-form {
@@ -25,4 +26,5 @@
   font-weight: 700;
   margin-left: -30px;
   border: none;
+  cursor: pointer;
 }
