--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ h1 {
   color: #ffffff;
   text-align: center;
   letter-spacing: 0.6px;
+  line-height: 60px;
 }
 
 h2 {
@@ -69,4 +70,20 @@ section {
   grid-template-columns: 200px 1fr 200px 1fr;
   grid-gap: 40px;
   padding: 150px 50px;
+}
+
+.error-message {
+  text-align: center;
+  font-size: 14px;
+  color: var(--faded-red);
+}
+
+@media (max-width: 800px) {
+  section {
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-gap: 40px;
+    padding: 150px 50px;
+
+}
 }
