--- a/src/assets/css/Login.css
+++ b/src/assets/css/Login.css
@@ -4,7 +4,7 @@
   width: 100vw;
   height: 100vh;
   display: grid;
-  padding-top: 200px;
+  padding-top: 150px;
   justify-content: center;
 
 }
@@ -30,12 +30,16 @@
 
 #onboard-form input {
   margin: 10px;
-  padding: 15px;
+  padding: 15px 15px 15px 50px;
   border-radius: 50px;
   border: none;
-  background-color: rgba(30,54,86,0.5);
-  opacity: 0.4;
+  background-color: rgba(30,54,86,0.2);
   color: #ffffff;
+}
+
+#onboard-form input::placeholder {
+  color: var(--gray);
+  opacity: 0.6;
 }
 
 #onboard-form button {
@@ -45,5 +49,27 @@
   border: none;
   background-color: var(--faded-red);
   color: #ffffff;
+  text-transform: uppercase;
 
+}
+
+#onboard-username {
+  background-image: url(../img/ic-username.png);
+  background-size: 20px;
+  background-position: 15px 11px;
+  background-repeat: no-repeat;
+}
+
+#onboard-email {
+  background-image: url(../img/ic-email.png);
+  background-size: 20px;
+  background-position: 15px 11px;
+  background-repeat: no-repeat;
+}
+
+#onboard-password {
+  background-image: url(../img/ic-password.png);
+  background-size: 20px;
+  background-position: 15px 11px;
+  background-repeat: no-repeat;
 }
