--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ section {
 }
 
 @media (max-width: 800px) {
-  section {
+  section, #locations {
     display:grid;
     grid-template-columns: 1fr;
     grid-gap: 40px;
