--- a/src/assets/css/Locations.css
+++ b/src/assets/css/Locations.css
@@ -1,8 +1,10 @@
 #locations {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 40px;
-  justify-content: space-between;
+  justify-content: center;
   padding: 50px 50px;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .locations-heading {
@@ -15,13 +17,20 @@
   padding: 0;
 }
 
-#locations figure {
+.thumbnail {
+  width: 100%;
+  max-width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.thumbnail-image {
+  width: 100%;
 }
 
 .caption {
   width: 100%;
   margin-top: -15%;
 }
+
