--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-body {
+html {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
@@ -7,4 +8,11 @@ body {
   color: #354052;
   line-height: 21px;
 }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 
